Lesson_7/prometheus_node_exporter.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app: node-exporter
  name: node-exporter
  namespace: default
spec:
  selector:
    matchLabels:
      app: node-exporter
  template:
    metadata:
      labels:
        app: node-exporter
    spec:
      containers:
        - image: prom/node-exporter
          name: node-exporter
          ports:
            - containerPort: 9101
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: node-exporter
  namespace: default
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '9100'
spec:
  selector:
    app: node-exporter
  ports:
    - name: node-exporter
      protocol: TCP
      port: 9101
