Lesson_7/prometheus_statefulset.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: default
  labels:
    app: prometheus
spec:
  ports:
    - port: 9090
      protocol: TCP
  clusterIP: None
  selector:
    app: prometheus

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prometheus
  namespace: default
spec:
  selector:
    matchLabels:
      app: prometheus
  serviceName: "prometheus"
  replicas: 1
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - image: prom/prometheus:v2.19.2
        name: prometheus
        ports:
          - containerPort: 9090
            protocol: TCP
        volumeMounts:
          - mountPath: /etc/prometheus
            name: config-volume
          - mountPath: /prometheus
            name: data
      volumes:
        - name: config-volume
          configMap:
            name: prometheus-config
      serviceAccount: prometheus
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: slow
        resources:
          requests:
            storage: 5Gi
